use gear uuid for socket and pid

--- a/bin/control
+++ b/bin/control
@@ -6,7 +6,7 @@ source ${OPENSHIFT_CARTRIDGE_SDK_BASH}
 export STOPTIMEOUT=20
 
 PHP_FPM_EXEC=${OPENSHIFT_PHP_VERSION_DIR}/sbin/php-fpm
-PHP_FPM_PID=${OPENSHIFT_PHP_DIR}/pid/php-fpm.pid
+PHP_FPM_PID=${OPENSHIFT_PHP_DIR}/pid/php-fpm-${OPENSHIFT_GEAR_UUID}.pid
 
 function _setup_configuration () {
     # Install config files
