--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -2,8 +2,8 @@ Name: php
 Cartridge-Short-Name: PHP
 Display-Name: Php
 License: MIT
-Version: "5.6.16"
-Versions: [ "5.5.22", "5.6.16" ]
+Version: "5.6.22"
+Versions: [ "5.5.22", "5.5.36", "5.6.16", "5.6.22" ]
 Website: https://github.com/boekkooi/openshift-cartridge-php
 Cartridge-Version: 0.0.2
 Cartridge-Vendor: boekkooi
