--- a/bin/control
+++ b/bin/control
@@ -119,6 +119,13 @@ function build() {
     fi
 }
 
+function tidy() {
+    client_message "Emptying php logs in dir: ${OPENSHIFT_LOG_DIR}"
+    shopt -s dotglob
+    rm -rf ${OPENSHIFT_LOG_DIR}/php*
+}
+
+
 case "$1" in
   start)     start ;;
   stop)      stop ;;
@@ -126,5 +133,6 @@ case "$1" in
   status)    status ;;
   reload)    reload ;;
   build)     build ;;
+  tidy)      tidy ;;
   *)         exit 0
 esac
